Fix overflow & com_modules

--- a/administrator/templates/isis/css/template.css
+++ b/administrator/templates/isis/css/template.css
@@ -7108,7 +7108,6 @@ div.modal.jviewport-width100 {
 	padding: 0 !important;
 }
 body.modal-open {
-	overflow: hidden;
 	-ms-overflow-style: none;
 }
 .modal-header {
@@ -7131,7 +7130,6 @@ body.modal-open {
 	padding: 0;
 	width: 100%;
 	height: auto;
-	overflow: hidden;
 }
 .modal-body .container-fluid {
 	padding-top: 15px;
