--- a/administrator/templates/isis/less/blocks/_modals.less
+++ b/administrator/templates/isis/less/blocks/_modals.less
@@ -1,7 +1,6 @@
 // Modals
 
 body.modal-open {
-	overflow: hidden;
 	-ms-overflow-style: none;
 }
 
@@ -26,7 +25,6 @@ body.modal-open {
   padding: 0;
   width: 100%;
   height: auto;
-  overflow: hidden;
   .container-fluid {
     padding-top: 15px;
     padding-bottom: 15px;
